--- a/Aula 28/index.html
+++ b/Aula 28/index.html
@@ -8,7 +8,9 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"> -->
+
+    <!-- Scripts -->
+    <script src="https://kit.fontawesome.com/af60b92010.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="easy"> 
@@ -54,21 +56,21 @@
                         <th scope="col">Status</th>
                         <th scope="col">Configurações</th>
                     </thead>
-                    <tbody>
+                    <tbody class="text-center">
                         <tr>
-                            <th scope="row">
+                            <th style="text-align: center; vertical-align:middle !important" scope="row">
                                 <div class="form-check ">
                                     <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
                                 </div>
                             </th>
-                            <th>1</td>
-                            <td>Juan Lucas Archangelo</td>
-                            <td>15654654654</td>
-                            <td>78.160.867/0001-00</td>
-                            <td>4G Basic</td>
-                            <td>159357</td>
-                            <td>156465121354</td>
-                            <td>
+                            <td style="text-align: center; vertical-align:middle !important">1</td>
+                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
+                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
+                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
+                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
+                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
+                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
+                            <td style="text-align: center; vertical-align:middle !important">
                                 <div>
                                     <select class="form-select rounded-pill p-2"" aria-label="Default select example">
                                         <option selected>Opções</option>
@@ -78,10 +80,74 @@
                                     </select>
                                 </div>
                             </td>
-                            <td>
+                            <td style="text-align: center; vertical-align:middle !important">
                                 <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
                             </td>
-                            <td><button type="button" class="btn btn-secondary rounded-pill p-2">
+                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
+                                <i class="fa fa-cog" aria-hidden="true"></i>
+                                    <span>Detalhes</span>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th style="text-align: center; vertical-align:middle !important" scope="row">
+                                <div class="form-check ">
+                                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
+                                </div>
+                            </th>
+                            <td style="text-align: center; vertical-align:middle !important">1</td>
+                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
+                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
+                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
+                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
+                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
+                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
+                            <td style="text-align: center; vertical-align:middle !important">
+                                <div>
+                                    <select class="form-select rounded-pill p-2"" aria-label="Default select example">
+                                        <option selected>Opções</option>
+                                        <option value="1">Bloquear</option>
+                                        <option value="1">Ativar</option>
+                                        <option value="1">Suspender</option>
+                                    </select>
+                                </div>
+                            </td>
+                            <td style="text-align: center; vertical-align:middle !important">
+                                <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
+                            </td>
+                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
+                                <i class="fa fa-cog" aria-hidden="true"></i>
+                                    <span>Detalhes</span>
+                                </button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <th style="text-align: center; vertical-align:middle !important" scope="row">
+                                <div class="form-check ">
+                                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
+                                </div>
+                            </th>
+                            <td style="text-align: center; vertical-align:middle !important">1</td>
+                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
+                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
+                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
+                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
+                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
+                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
+                            <td style="text-align: center; vertical-align:middle !important">
+                                <div>
+                                    <select class="form-select rounded-pill p-2"" aria-label="Default select example">
+                                        <option selected>Opções</option>
+                                        <option value="1">Bloquear</option>
+                                        <option value="1">Ativar</option>
+                                        <option value="1">Suspender</option>
+                                    </select>
+                                </div>
+                            </td>
+                            <td style="text-align: center; vertical-align:middle !important">
+                                <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
+                            </td>
+                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
                                 <i class="fa fa-cog" aria-hidden="true"></i>
                                     <span>Detalhes</span>
                                 </button>
