--- a/Aula 28/painel.html
+++ b/Aula 28/painel.html
@@ -13,148 +13,56 @@
     <script src="https://kit.fontawesome.com/af60b92010.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="easy"> 
-        <div class="container bg-secondary bg-opacity-10">
-            <div class="container-fluid p-3">
-                <h1>Assinantes</h1>
-            </div>
+    <div class="easy p-4"> 
+        <div>
+            <h1>Assinantes</h1>
+        </div>
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-3 bg-success m-3 p-4 rounded-4">
+                    1
+                </div>
 
-            <div class="container-fluid p-2 bg-secondary bg-opacity-25 rounded-pill d-flex flex-row">
-                <div class="p-2">
-                    <input class="form-control rounded-pill" id="texto_busca" placeholder="Pesquisar Assinante...">
-                </div>
-                <div class="p-2">
-                    <i class="fa fa-filter" aria-hidden="true"></i>
-                    <span>Filtrar por</span>
-                </div>
-                <div class="p-2">
-                    <select class="form-select rounded-pill">
-                        <option selected>50</option>
-                        <option value="1">100</option>
-                        <option value="1">200</option>
-                        <option value="1">300</option>
-                    </select>
-                </div>
-            </div>
-        
-            <div class="container-fluid p-3 bg-white rounded-5 mt-3">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <th scope="col">
-                            <div class="form-check ">
-                                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <div class="col-8 p-4 rounded-4">
+                    <div class="container bg-success rounded-4">
+                        <div class="row mb-3">
+                            <div class="col">
+                                Assinatura
                             </div>
-                        </th>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Numeração</th>
-                        <th scope="col">CNPJ</th>
-                        <th scope="col">Plano</th>
-                        <th scope="col">Cod. Aux.</th>
-                        <th scope="col">Sim card</th>
-                        <th scope="col">Ações</th>
-                        <th scope="col">Status</th>
-                        <th scope="col">Configurações</th>
-                    </thead>
-                    <tbody class="text-center">
-                        <tr>
-                            <th style="text-align: center; vertical-align:middle !important" scope="row">
-                                <div class="form-check ">
-                                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
-                                </div>
-                            </th>
-                            <td style="text-align: center; vertical-align:middle !important">1</td>
-                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
-                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
-                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
-                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
-                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
-                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div>
-                                    <select class="form-select rounded-pill p-2"" aria-label="Default select example">
-                                        <option selected>Opções</option>
-                                        <option value="1">Bloquear</option>
-                                        <option value="1">Ativar</option>
-                                        <option value="1">Suspender</option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                                    <span>Detalhes</span>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th style="text-align: center; vertical-align:middle !important" scope="row">
-                                <div class="form-check ">
-                                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
-                                </div>
-                            </th>
-                            <td style="text-align: center; vertical-align:middle !important">1</td>
-                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
-                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
-                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
-                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
-                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
-                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div>
-                                    <select class="form-select rounded-pill p-2"" aria-label="Default select example">
-                                        <option selected>Opções</option>
-                                        <option value="1">Bloquear</option>
-                                        <option value="1">Ativar</option>
-                                        <option value="1">Suspender</option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                                    <span>Detalhes</span>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th style="text-align: center; vertical-align:middle !important" scope="row">
-                                <div class="form-check ">
-                                    <input class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
-                                </div>
-                            </th>
-                            <td style="text-align: center; vertical-align:middle !important">1</td>
-                            <td style="text-align: center; vertical-align:middle !important">Juan Lucas Archangelo</td>
-                            <td style="text-align: center; vertical-align:middle !important"">15654654654</td>
-                            <td style="text-align: center; vertical-align:middle !important"">78.160.867/0001-00</td>
-                            <td style="text-align: center; vertical-align:middle !important"">4G Basic</td>
-                            <td style="text-align: center; vertical-align:middle !important"">159357</td>
-                            <td style="text-align: center; vertical-align:middle !important"">156465121354</td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div>
-                                    <select class="form-select rounded-pill p-2"" aria-label="Default select example">
-                                        <option selected>Opções</option>
-                                        <option value="1">Bloquear</option>
-                                        <option value="1">Ativar</option>
-                                        <option value="1">Suspender</option>
-                                    </select>
-                                </div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important">
-                                <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
-                            </td>
-                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
-                                    <span>Detalhes</span>
-                                </button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
+                            <div class="col">
+                                Assinatura
+                            </div>
+                            <div class="col">
+                                Assinatura
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="row mb-3">
+                          <div class="col bg-info rounded-4">
+                            Column
+                          </div>
+                          <div class="col bg-info rounded-4">
+                            Column
+                          </div>
+                          <div class="col bg-info rounded-4">
+                            Column
+                          </div>
+                        </div>
+                    </div>
+
+                    <div class="container">
+                        <div class="row mb-3">
+                          <div class="col-7 bg-info rounded-4">
+                            Column
+                          </div>
+                          <div class="col-5 bg-info rounded-4">
+                            Column
+                          </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
