Identação das div corrigida

--- a/Aula 28/painel.html
+++ b/Aula 28/painel.html
@@ -14,12 +14,12 @@
 </head>
 <body>
     <div class="easy"> 
-        <div class="container-fluid bg-secondary bg-opacity-10 ps-5">
+        <div class="container-fluid bg-secondary bg-opacity-10 ps-4">
             <div class="pb-3 pt-4">
                 <h1>Assinantes</h1>
             </div>
 
-            <div class="row align-items-center">
+            <div class="row align-items-start">
                 <div class="col-3 bg-white p-4 rounded-4">
                     <div class="container text-center">
                         <div class="row mb-3">
@@ -118,7 +118,7 @@
                     </div>
                     <!-- Fim Dados de contrato -->
 
-                    <!-- Início Dados de Acesso Cliente -->
+                    <!-- Início Dados de Acesso Cliente --> 
                     <div class="container pb-5">
                         <div class="row">
                             <div class="col">
@@ -200,11 +200,11 @@
                 </div>
 
                 <div class="col-9">
-                    <div class="container bg-white rounded-4 pt-3 mb-3">
-                        <div class="row">
+                    <div class="container bg-white rounded-4 p-4">
+                        <div class="row align-items-start">
                             <div class="col">
-                                <div class="row pb-3">
-                                    <div class="col-9">
+                                <div class="row">
+                                    <div class="col">
                                         <strong><h4>Assinatura</h4></strong>
                                     </div>
                                     <div class="col-auto text-white text-center">
@@ -214,7 +214,6 @@
                                         </button>
                                     </div>
                                 </div>
-
                                 <div class="row">
                                     <div class="col-auto">
                                         <strong><h6>Número da Linha</h6></strong>
@@ -328,7 +327,7 @@
 
                             <button type="button" class="btn btn-secondary btn-sm mt-4">Detalhamento</button>
                           </div>
-                          <div class="col bg-white rounded-4 text-center p-3 mx-4">
+                          <div class="col bg-white rounded-4 text-center p-3">
                             <h4 class="pb-3">Consumo de Minutos</h4>
                             <div class="row text-center">
                                 <div class="col-2">
@@ -372,7 +371,7 @@
 
                     <div class="container">
                         <div class="row">
-                            <div class="col-8 bg-white rounded-4 mx-3">
+                            <div class="col-8 bg-white rounded-4">
                                 <div class="container p-3">
                                     <div class="row">
                                         <div class="col">
@@ -462,7 +461,7 @@
                                             <div class="row">
                                                 <div class="col-md-8">
                                                     <div class="form-floating">
-                                                        <input type="date" class="form-control" id="floatingInputGrid" placeholder="name@example.com" value="mdo@example.com">
+                                                        <input type="date" class="form-control" id="floatingInputGrid">
                                                         <label for="floatingInputGrid">Periodo</label>
                                                     </div>
                                                 </div>
@@ -558,7 +557,7 @@
                                             <div class="row">
                                                 <div class="col-md-8">
                                                     <div class="form-floating">
-                                                        <input type="date" class="form-control" id="floatingInputGrid" placeholder="name@example.com" value="mdo@example.com">
+                                                        <input type="date" class="form-control" id="floatingInputGrid">
                                                         <label for="floatingInputGrid">Periodo</label>
                                                     </div>
                                                 </div>
@@ -571,8 +570,83 @@
                                 </div>
                             </div>
                             
-                            <div class="col-auto bg-white rounded-4 p-4">
-                                <button type="button" class="btn btn-primary btn-lg rounded-pill">Abrir Suporte</button>
+                            <div class="col-4 bg-white rounded-4 p-4">
+                                <button type="button" class="btn btn-secondary btn-lg btn-block rounded-4" style="width: 100%;">
+                                    <i class="fa fa-life-ring" aria-hidden="true"></i>
+                                    <span>Abrir Suporte</span>
+                                </button>
+                                <h4 class="pt-4">Ultimos suportes</h4>
+                                <table class="table table-borderless">
+                                    <tbody>
+                                        <tr>
+                                            <td style="width: 20px;">
+                                                45616
+                                            </td>
+                                            <td>
+                                                Alteração na tela de usua...
+                                            </td>
+                                            <td style="color:  green;">
+                                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 20px;">
+                                                45616
+                                            </td>
+                                            <td>
+                                                Alteração na tela de usua...
+                                            </td>
+                                            <td style="color:  green;">
+                                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 20px;">
+                                                45616
+                                            </td>
+                                            <td>
+                                                Alteração na tela de usua...
+                                            </td>
+                                            <td style="color:  green;">
+                                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 20px;">
+                                                45616
+                                            </td>
+                                            <td>
+                                                Alteração na tela de usua...
+                                            </td>
+                                            <td style="color:  green;">
+                                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                        <tr>
+                                            <td style="width: 20px;">
+                                                45616
+                                            </td>
+                                            <td>
+                                                Alteração na tela de usua...
+                                            </td>
+                                            <td style="color:  green;">
+                                                <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                                            </td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                                <hr>
+                                <div class="row">
+                                    <div class="col-md-8">
+                                        <div class="form-floating">
+                                            <input type="text" class="form-control" id="floatingInputGrid" placeholder="Pesquisar...">
+                                            <label for="floatingInputGrid">Procurar Suporte</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-auto">
+                                        <button type="submit" style="vertical-align: middle;" class="btn btn-secondary rounded-pill">Buscar</button>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
