--- a/Aula 28/index.html
+++ b/Aula 28/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="easy.css">
 
     <!-- Scripts -->
     <script src="https://kit.fontawesome.com/af60b92010.js" crossorigin="anonymous"></script>
@@ -83,8 +83,9 @@
                             <td style="text-align: center; vertical-align:middle !important">
                                 <div class="bg-success text-white text-center rounded-pill p-2">Suspender</div>
                             </td>
-                            <td style="text-align: center; vertical-align:middle !important"><button type="button" class="btn btn-secondary rounded-pill p-2">
-                                <i class="fa fa-cog" aria-hidden="true"></i>
+                            <td style="text-align: center; vertical-align:middle !important">
+                                <button type="button" class="btn btn-secondary rounded-pill p-2">
+                                    <i class="fa fa-cog" aria-hidden="true"></i>
                                     <span>Detalhes</span>
                                 </button>
                             </td>
