--- a/Assinatura/index.html
+++ b/Assinatura/index.html
@@ -4,10 +4,19 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <style>
+        .foto-fundo{
+            background-image: url(imagen-lateral.jpg);
+            background-repeat: no-repeat;
+            background-position: right;
+            background-size: auto;
+            background-size: 450px;
+        }
+    </style>
   </head>
   <body>
-    <div class="card w-75 bg-secondary bg-opacity-25">
-        <div class="card-body d-flex">
+    <div class="card w-75 bg-secondary bg-opacity-25 foto-fundo">
+        <div class="card-body d-flex p-4">
             <div class="col-8">
                 <div class="row align-items-center pb-2">
                     <div class="col-2">
@@ -54,9 +63,20 @@
                         <span>R. André Gonçalves, 130 - Parque Taquaral - Campinas, São Paulo</span>
                     </div>
                 </div>
+                <div class="row align-items-center pb-3 ps-5 pt-4">
+                    <div class="col-8 border border-danger border-2">
+                    </div>
+                    <div class="col">
+                        <img src="select.png" width="30" alt="Telefone">
+                        <img src="select.png" width="30" alt="Celular">
+                        <img src="select.png" width="30" alt="Televisão">
+                        <img src="select.png" width="30" alt="Fone">
+                        <img src="select.png" width="30" alt="Camera">
+                    </div>
+                </div>
             </div>
             <div class="col-auto">
-                oi
+
             </div>
         </div>
     </div>
