Correção na acentuação

--- a/pdf/index.html
+++ b/pdf/index.html
@@ -136,14 +136,10 @@
                         <div class="col border-color w-100 p-3">
                             <h5 class="conteudo pb-3 text-color">MENSAGEM <br >DO CONDOMINIO</h5>
                             <p>Estamos aqui para tudo o que você precisar!</p>
-                            <p>Você escolhe como prefere falar com a nossa equipe: pelo WhatsApp
-                            no número 11 2797-7585 ou pelo telefone 11 2797-7583.</p>
-                            <p>A equipe atende de segunda à sexta das 8h30 às 17h e os serviços
-                            digitais estão disponíveis 24h.
+                            <p>Você escolhe como prefere falar com a nossa equipe: pelo WhatsApp no número 11 2797-7585 ou pelo telefone 11 2797-7583.</p>
+                            <p>A equipe atende de segunda à sexta das 8h30 às 17h e os serviços digitais estão disponíveis 24h.
                             <p>Alerta de Fraude:
-                            Confira se o Boleto é do Bradesco, código 237 ou Itaú, código 341 e
-                            nome no campo cedente está Lello Condomínios LTDA -
-                            CNPJ:44.166.627/0001-92.</p>
+                            Confira se o Boleto é do Bradesco, código 237 ou Itaú, código 341 e nome no campo cedente está Lello Condomínios LTDA - CNPJ:44.166.627/0001-92.</p>
                             <p>Status do seu e-mail: Válido</p>
                         </div>
                     </div>
